--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
-  "name": "mktraders-client",
+  "name": "mktraders-full",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "axios": "^1.5.0"
+    "start": "concurrently \"npm:server\" \"npm:client\"",
+    "bootstrap": "cd server && npm install && cd ../client && npm install",
+    "server": "cd server && node index.js",
+    "client": "cd client && npm run dev"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^4.0.0"
+    "concurrently": "^7.6.0"
   }
 }
