--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
+
 {
   "name": "mktraders-server",
   "version": "1.0.0",
+  "type": "module",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
+  "scripts": { "start": "node server.js" },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
